# macti

./: .gitignore  README.md  pyproject.toml
.ans/plantillas/: .__ans_1  .__fee_1
notebooks/Algebra_Lineal_01/: 01_Espacios_Vectoriales.ipynb  02_Producto_Escalar.ipynb  03_CLineal_BOrtonormal.ipynb  04_Normas_Vectoriales.ipynb  05_Matrices.ipynb  05_Matrices_Normas_Eigen.ipynb  06_Normas_Mat_Eigen.ipynb  06_Sol_Sis_Lin_Iter_1.ipynb  06_Sol_Sist_Lineales_Intro.ipynb  07_Inversa_Factor.ipynb  07_Sol_Sis_Lin_Iter_1.ipynb  07_Sol_Sis_Lin_Krylov.ipynb  08_Sol_Sis_Lin_Krylov.ipynb  a01_Espacios_Vectoriales.ipynb  a02_Producto_Escalar.ipynb  a03_CLineal_BOrtonormal.ipynb  a05_Matrices_Normas_Eigen.ipynb  errorGaussSeidel.npy  errorJacobi.npy  errorSOR.npy  vecspace.py
notebooks/Algebra_Lineal_02/: 01_Sol_Sist_Intro.ipynb  02_Sol_Sis_Algo_Iter.ipynb  03_Sol_Sis_Algo_Krylov.ipynb  errorGaussSeidel.npy  errorJacobi.npy  errorSOR.npy
notebooks/Algebra_lineal_01/: 03_CLineal_BOrtonormal.ipynb
notebooks/Algoritmos_y_convergencia/: 01_Algoritmos_Convergencia_Estabilidad.ipynb  02_Algoritmos_condicionalmente_estables.ipynb  q01_Algoritmos_Convergencia_Estabilidad.ipynb  q02_Algoritmos_condicionalmente_estables.ipynb
notebooks/Aritmetica_de_punto_flotante/: 01_AritmeticaDePuntoFlotante.ipynb
notebooks/Calculo_01/: 01_Funciones.ipynb
plantillas/: plantilla-Copy1.ipynb  plantilla.ipynb  q1_plantilla.ipynb
scripts/: assignments_creation.csv  assignments_update.csv  macti_create_update_course.py  macti_nbg_qs.py  macti_setup_course.py
tests/: tests_todo.py
(+104 files in other folders)
